data/derived/comb/progs/unify/prog1991.ml.out
Characters 28-59:
  wwhile(fun x -> f x  not (f x = x),b);;
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
